[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/FightManager.gd" type="Script" id=1]
[ext_resource path="res://utils/InputFormatLabel.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/M/V/Hint:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "flash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/M/V/Hint:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ) ]
}

[node name="FightManager" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="M" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 70
custom_constants/margin_top = 5
custom_constants/margin_left = 70
custom_constants/margin_bottom = 5

[node name="V" type="VBoxContainer" parent="CanvasLayer/Control/M"]
margin_left = 70.0
margin_top = 5.0
margin_right = 378.0
margin_bottom = 251.0

[node name="Title" type="Label" parent="CanvasLayer/Control/M/V"]
margin_right = 308.0
margin_bottom = 16.0
text = "Baby Dragon"
align = 1

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/Control/M/V"]
margin_top = 20.0
margin_right = 308.0
margin_bottom = 36.0
max_value = 1.0
step = 0.0
value = 1.0

[node name="Hint" parent="CanvasLayer/Control/M/V" instance=ExtResource( 2 )]
visible = false
margin_top = 230.0
margin_right = 308.0
margin_bottom = 246.0
size_flags_vertical = 10
text = "Press {feed} to feed"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/M/V/Hint"]
root_node = NodePath("../../../../../..")
autoplay = "flash"
anims/RESET = SubResource( 2 )
anims/flash = SubResource( 1 )

[node name="DeathDelayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="DeathDelayTimer" to="." method="_on_DeathDelayTimer_timeout"]
[connection signal="timeout" from="DownTimer" to="." method="_on_DownTimer_timeout"]
